# supabase-inactive-fix

./: .env.example  .gitignore  KNOWN_ISSUES.md  README.md  main.py  pyproject.toml  run.sh  run2.sh
services/: supabase_service.py
